# lvgl-components

./: .cursorrules  CMakeLists.txt
docs/: wxUI_实现原理深度解析.md  wxUI_核心设计思路文档.md
docs/explore/: CMakeLists.txt  README.md  build.sh  wxUI_深度学习总结.md
docs/explore/include/wx/: app.h  button.h  checkbox.h  combobox.h  gauge.h  hyperlink.h  listbox.h  radiobox.h  sizer.h  slider.h  statbmp.h  stattext.h  textctrl.h  window.h  wx.h
docs/explore/src/: ExplorerApp.cpp  MockWidgets.cpp  main.cpp
docs/lvgl_modern/: CMakeLists.txt  LVGL_现代化封装项目总结.md  LVGL_现代化改造技术分析.md  README.md  build.sh
docs/lvgl_modern/cmake/: LVGL_ModernConfig.cmake.in
docs/lvgl_modern/examples/: basic_example.cpp  simple_example.cpp  threading_example.cpp
docs/lvgl_modern/include/lvgl_modern/: lvgl_modern.hpp
docs/lvgl_modern/include/lvgl_modern/core/: concepts.hpp  widget_base.hpp
docs/lvgl_modern/include/lvgl_modern/layouts/: containers.hpp
docs/lvgl_modern/include/lvgl_modern/reactive/: observable.hpp
docs/lvgl_modern/include/lvgl_modern/threading/: thread_safe.hpp
docs/lvgl_modern/include/lvgl_modern/widgets/: button.hpp  label.hpp  slider.hpp
docs/lvgl_modern/include/mock_lvgl/: lvgl.h
iface/: Adaptor.h  Bar.h  Button.cpp  Button.h  ButtonConfig.h  Checkbox.cpp  Checkbox.h  CheckboxConfig.h  ColorConfig.h  Component.cpp  Component.h  ComponentConfig.h  Container.h  Image.h  Label.h  List.h  Modifier.h  ProgressBar.h  README.md  Radio.cpp  Radio.h  RadioConfig.h  Slider.h  Spinner.h  Style.h  Switch.cpp  Switch.h  SwitchConfig.h  TextArea.h  View.h
iface/gui/: Adaptor.h  Modifier.h  Render.h  View.h  ViewBase.cpp  ViewBase.h
iface/gui/components/: Button.h  Container.h  Label.h
iface/gui/style/: Color.h  Layout.h  Position.h  Size.h
impls/lv8/: AdaptorLv8.cpp  ButtonLv8.cpp  CheckboxLv8.cpp  ComponentLv8.cpp  RadioLv8.cpp  SwitchLv8.cpp
